[package]
name = "npwg"
version = "0.4.5"
edition = "2021"
license = "MIT"
authors = ["Volker Schwaberow <volker@schwaberow.de>"]
description = "Securely generate random passwords"
repository = "https://github.com/vschwaberow/npwg"

[lib]
name = "npwg"
path = "src/lib.rs"

[[bin]]
name = "npwg"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.9.2", features = ["std", "small_rng"] }
regex = "1.11.1"
chacha20 = { version = "0.9.1", features = ["std", "zeroize"] }
clap = { version = "4.5.41", features = ["cargo", "env", "derive"] }
zeroize = "1.8.1"
tokio = { version = "1.45.1", features = ["full"] }
dashmap = "6.1.0"
rand_distr = "0.5"
dirs = "6.0.0"
reqwest = { version = "0.12.21", features = ["blocking"] }
futures = "0.3.31"
colored = "3.0.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
dialoguer = "0.11.0"
console = "0.15.11"
arboard = { version = "3.6.0", features = ["wl-clipboard-rs"] }

[profile.release]
opt-level = 3
debug = false
strip = true
lto = false
