[[bin]]
name = "npwg"
path = "src/main.rs"

[package]
name = "npwg"
version = "0.4.7"
edition = "2021"
license = "MIT"
authors = [ "Volker Schwaberow <volker@schwaberow.de>",]
description = "Securely generate random passwords"
repository = "https://github.com/vschwaberow/npwg"

[lib]
name = "npwg"
path = "src/lib.rs"

[dependencies]
regex = "1.11.1"
zeroize = "1.8.1"
dashmap = "6.1.0"
rand_distr = "0.5"
dirs = "6.0.0"
futures = "0.3.31"
colored = "3.0.0"
thiserror = "2.0.12"
dialoguer = "0.12.0"
console = "0.16.1"
sha2 = "0.10"
toml = "0.9"

[dev-dependencies]
tempfile = "3.12"

[dependencies.rand]
version = "0.9.2"
features = [ "std", "small_rng",]

[dependencies.chacha20]
version = "0.9.1"
features = [ "std", "zeroize",]

[dependencies.clap]
version = "4.5.49"
features = [ "cargo", "env", "derive",]

[dependencies.tokio]
version = "1.47.1"
features = [ "full",]

[dependencies.reqwest]
version = "0.12.22"
features = [ "blocking",]

[dependencies.serde]
version = "1.0.224"
features = [ "derive",]

[dependencies.arboard]
version = "3.6.0"
features = [ "wl-clipboard-rs",]

[profile.release]
opt-level = 3
debug = false
strip = true
lto = false
